SOL-1330: Fix wallpaper z-index.

--- a/scss/modules/_ads-wallpaper.scss
+++ b/scss/modules/_ads-wallpaper.scss
@@ -9,7 +9,7 @@
     left:0;
     right:0;
     bottom:0;
-    z-index:-1;
+    z-index:1;
 
     a {
         display:block;
